完成辅助检查和病历的联动功能，随访待测试

--- a/widget/html/accessoryexam/accessoryExam.html
+++ b/widget/html/accessoryexam/accessoryExam.html
@@ -100,6 +100,155 @@
                     <div class="accessory_img" id="iol_master_img"></div>
                 </div>
             </div>
+            <div class="groupName">青光眼</div>
+            <div class="group group-edit">
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">UBM</div>
+                        <div class="img_button" id="ubm_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="ubm"></textarea>
+                    </div>
+                    <div class="accessory_img" id="ubm_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">视野</div>
+                        <div class="img_button" id="view_horizon_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="view_horizon"></textarea>
+                    </div>
+                    <div class="accessory_img" id="view_horizon_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">RFNL</div>
+                        <div class="img_button" id="glaucoma_rnfl_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="glaucoma_rnfl"></textarea>
+                    </div>
+                    <div class="accessory_img" id="glaucoma_rnfl_img"></div>
+                </div>
+                <div class="field textarea_field bottom">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">MRI</div>
+                        <div class="img_button" id="glaucoma_mri_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="glaucoma_mri"></textarea>
+                    </div>
+                    <div class="accessory_img" id="glaucoma_mri_img"></div>
+                </div>
+            </div>
+            <div class="groupName">眼底</div>
+            <div class="group group-edit">
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">OCT</div>
+                        <div class="img_button" id="oct_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="oct"></textarea>
+                    </div>
+                    <div class="accessory_img" id="oct_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">OCTA</div>
+                        <div class="img_button" id="octa_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="octa"></textarea>
+                    </div>
+                    <div class="accessory_img" id="octa_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">眼底照相</div>
+                        <div class="img_button" id="fundus_oculi_pic_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="fundus_oculi_pic"></textarea>
+                    </div>
+                    <div class="accessory_img" id="fundus_oculi_pic_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">B超</div>
+                        <div class="img_button" id="b_ultrasonic_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="b_ultrasonic"></textarea>
+                    </div>
+                    <div class="accessory_img" id="b_ultrasonic_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">FFA</div>
+                        <div class="img_button" id="ffa_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="ffa"></textarea>
+                    </div>
+                    <div class="accessory_img" id="ffa_img"></div>
+                </div>
+                <div class="field textarea_field bottom">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">ICG</div>
+                        <div class="img_button" id="icg_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="icg"></textarea>
+                    </div>
+                    <div class="accessory_img" id="icg_img"></div>
+                </div>
+            </div>
+            <div class="groupName">视神经眼科</div>
+            <div class="group group-edit">
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">VEP</div>
+                        <div class="img_button" id="vep_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="vep"></textarea>
+                    </div>
+                    <div class="accessory_img" id="vep_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">ERG</div>
+                        <div class="img_button" id="erg_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="erg"></textarea>
+                    </div>
+                    <div class="accessory_img" id="erg_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">RFNL</div>
+                        <div class="img_button" id="no_rnfl_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="no_rnfl"></textarea>
+                    </div>
+                    <div class="accessory_img" id="no_rnfl_img"></div>
+                </div>
+                <div class="field textarea_field bottom">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">MRI</div>
+                        <div class="img_button" id="no_mri_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="no_mri"></textarea>
+                    </div>
+                    <div class="accessory_img" id="no_mri_img"></div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
