--- a/widget/html/accessoryexam/accessoryExamFrame.html
+++ b/widget/html/accessoryexam/accessoryExamFrame.html
@@ -100,6 +100,155 @@
                     <div class="accessory_img" id="iol_master_img"></div>
                 </div>
             </div>
+            <div class="groupName">青光眼</div>
+            <div class="group group-edit">
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">UBM</div>
+                        <div class="img_button" id="ubm_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="ubm" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="ubm_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">视野</div>
+                        <div class="img_button" id="view_horizon_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="view_horizon" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="view_horizon_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">RFNL</div>
+                        <div class="img_button" id="glaucoma_rnfl_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="glaucoma_rnfl" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="glaucoma_rnfl_img"></div>
+                </div>
+                <div class="field textarea_field bottom">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">MRI</div>
+                        <div class="img_button" id="glaucoma_mri_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="glaucoma_mri" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="glaucoma_mri_img"></div>
+                </div>
+            </div>
+            <div class="groupName">眼底</div>
+            <div class="group group-edit">
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">OCT</div>
+                        <div class="img_button" id="oct_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="oct" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="oct_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">OCTA</div>
+                        <div class="img_button" id="octa_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="octa" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="octa_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">眼底照相</div>
+                        <div class="img_button" id="fundus_oculi_pic_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="fundus_oculi_pic" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="fundus_oculi_pic_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">B超</div>
+                        <div class="img_button" id="b_ultrasonic_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="b_ultrasonic" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="b_ultrasonic_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">FFA</div>
+                        <div class="img_button" id="ffa_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="ffa" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="ffa_img"></div>
+                </div>
+                <div class="field textarea_field bottom">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">ICG</div>
+                        <div class="img_button" id="icg_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="icg" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="icg_img"></div>
+                </div>
+            </div>
+            <div class="groupName">视神经眼科</div>
+            <div class="group group-edit">
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">VEP</div>
+                        <div class="img_button" id="vep_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="vep" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="vep_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">ERG</div>
+                        <div class="img_button" id="erg_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="erg" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="erg_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">RFNL</div>
+                        <div class="img_button" id="no_rnfl_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="no_rnfl" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="no_rnfl_img"></div>
+                </div>
+                <div class="field textarea_field bottom">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">MRI</div>
+                        <div class="img_button" id="no_mri_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="no_mri" placeholder="请输入内容"></textarea>
+                    </div>
+                    <div class="accessory_img" id="no_mri_img"></div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
@@ -142,6 +291,20 @@ apiready = function() {
         $api.byId("corneal_curvature").value = pageData.accessory_exam_pointer.corneal_curvature;
         $api.byId("corneal_topography").value = pageData.accessory_exam_pointer.corneal_topography;
         $api.byId("iol_master").value = pageData.accessory_exam_pointer.iol_master;
+        $api.byId("ubm").value = pageData.accessory_exam_pointer.ubm;
+        $api.byId("view_horizon").value = pageData.accessory_exam_pointer.view_horizon;
+        $api.byId("glaucoma_rnfl").value = pageData.accessory_exam_pointer.glaucoma_rnfl;
+        $api.byId("glaucoma_mri").value = pageData.accessory_exam_pointer.glaucoma_mri;
+        $api.byId("oct").value = pageData.accessory_exam_pointer.oct;
+        $api.byId("octa").value = pageData.accessory_exam_pointer.octa;
+        $api.byId("fundus_oculi_pic").value = pageData.accessory_exam_pointer.fundus_oculi_pic;
+        $api.byId("b_ultrasonic").value = pageData.accessory_exam_pointer.b_ultrasonic;
+        $api.byId("ffa").value = pageData.accessory_exam_pointer.ffa;
+        $api.byId("icg").value = pageData.accessory_exam_pointer.icg;
+        $api.byId("vep").value = pageData.accessory_exam_pointer.vep;
+        $api.byId("erg").value = pageData.accessory_exam_pointer.erg;
+        $api.byId("no_rnfl").value = pageData.accessory_exam_pointer.no_rnfl;
+        $api.byId("no_mri").value = pageData.accessory_exam_pointer.no_mri;
         setImgs();
         // 将附加检查数据存储在临时变量中，因为每次增加图片都需拼接图片
         // 的 html，所以增加完图片要保存到
@@ -365,6 +528,20 @@ function saveAccessoryExam() {
     pageData.accessory_exam_pointer.corneal_curvature = $api.byId("corneal_curvature").value;
     pageData.accessory_exam_pointer.corneal_topography = $api.byId("corneal_topography").value;
     pageData.accessory_exam_pointer.iol_master = $api.byId("iol_master").value;
+    pageData.accessory_exam_pointer.ubm = $api.byId("ubm").value;
+    pageData.accessory_exam_pointer.view_horizon = $api.byId("view_horizon").value;
+    pageData.accessory_exam_pointer.glaucoma_rnfl = $api.byId("glaucoma_rnfl").value;
+    pageData.accessory_exam_pointer.glaucoma_mri = $api.byId("glaucoma_mri").value;
+    pageData.accessory_exam_pointer.oct = $api.byId("oct").value;
+    pageData.accessory_exam_pointer.octa = $api.byId("octa").value;
+    pageData.accessory_exam_pointer.fundus_oculi_pic = $api.byId("fundus_oculi_pic").value;
+    pageData.accessory_exam_pointer.b_ultrasonic = $api.byId("b_ultrasonic").value;
+    pageData.accessory_exam_pointer.ffa = $api.byId("ffa").value;
+    pageData.accessory_exam_pointer.icg = $api.byId("icg").value;
+    pageData.accessory_exam_pointer.vep = $api.byId("vep").value;
+    pageData.accessory_exam_pointer.erg = $api.byId("erg").value;
+    pageData.accessory_exam_pointer.no_rnfl = $api.byId("no_rnfl").value;
+    pageData.accessory_exam_pointer.no_mri = $api.byId("no_mri").value;
 
     // 保存在本地
     setStorage(source, pageData);
