--- a/widget/html/accessoryexam/viewAccessoryExamFrame.html
+++ b/widget/html/accessoryexam/viewAccessoryExamFrame.html
@@ -22,7 +22,6 @@
                 <span id="title">辅助检查维护</span>
             </div>
             <a id="right" tapmode="" class="button button-raised button-silver">
-
             </a>
         </header>
         <div id="main" class="flex-con">
@@ -100,6 +99,155 @@
                     <div class="accessory_img" id="iol_master_img"></div>
                 </div>
             </div>
+            <div class="groupName">青光眼</div>
+            <div class="group">
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">UBM</div>
+                        <div class="img_button" id="ubm_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="ubm"></textarea>
+                    </div>
+                    <div class="accessory_img" id="ubm_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">视野</div>
+                        <div class="img_button" id="view_horizon_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="view_horizon"></textarea>
+                    </div>
+                    <div class="accessory_img" id="view_horizon_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">RFNL</div>
+                        <div class="img_button" id="glaucoma_rnfl_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="glaucoma_rnfl"></textarea>
+                    </div>
+                    <div class="accessory_img" id="glaucoma_rnfl_img"></div>
+                </div>
+                <div class="field textarea_field bottom">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">MRI</div>
+                        <div class="img_button" id="glaucoma_mri_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="glaucoma_mri"></textarea>
+                    </div>
+                    <div class="accessory_img" id="glaucoma_mri_img"></div>
+                </div>
+            </div>
+            <div class="groupName">眼底</div>
+            <div class="group">
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">OCT</div>
+                        <div class="img_button" id="oct_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="oct"></textarea>
+                    </div>
+                    <div class="accessory_img" id="oct_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">OCTA</div>
+                        <div class="img_button" id="octa_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="octa"></textarea>
+                    </div>
+                    <div class="accessory_img" id="octa_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">眼底照相</div>
+                        <div class="img_button" id="fundus_oculi_pic_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="fundus_oculi_pic"></textarea>
+                    </div>
+                    <div class="accessory_img" id="fundus_oculi_pic_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">B超</div>
+                        <div class="img_button" id="b_ultrasonic_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="b_ultrasonic"></textarea>
+                    </div>
+                    <div class="accessory_img" id="b_ultrasonic_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">FFA</div>
+                        <div class="img_button" id="ffa_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="ffa"></textarea>
+                    </div>
+                    <div class="accessory_img" id="ffa_img"></div>
+                </div>
+                <div class="field textarea_field bottom">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">ICG</div>
+                        <div class="img_button" id="icg_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="icg"></textarea>
+                    </div>
+                    <div class="accessory_img" id="icg_img"></div>
+                </div>
+            </div>
+            <div class="groupName">视神经眼科</div>
+            <div class="group">
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">VEP</div>
+                        <div class="img_button" id="vep_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="vep"></textarea>
+                    </div>
+                    <div class="accessory_img" id="vep_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">ERG</div>
+                        <div class="img_button" id="erg_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="erg"></textarea>
+                    </div>
+                    <div class="accessory_img" id="erg_img"></div>
+                </div>
+                <div class="field textarea_field">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">RFNL</div>
+                        <div class="img_button" id="no_rnfl_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="no_rnfl"></textarea>
+                    </div>
+                    <div class="accessory_img" id="no_rnfl_img"></div>
+                </div>
+                <div class="field textarea_field bottom">
+                    <div class="field_img">
+                        <div class="textarea_key_with_img">MRI</div>
+                        <div class="img_button" id="no_mri_btn"></div>
+                    </div>
+                    <div class="textarea_value">
+                        <textarea type="text" id="no_mri"></textarea>
+                    </div>
+                    <div class="accessory_img" id="no_mri_img"></div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
@@ -121,6 +269,20 @@ apiready = function() {
     $api.attr($api.byId('corneal_curvature'), 'readonly', 'true');
     $api.attr($api.byId('corneal_topography'), 'readonly', 'true');
     $api.attr($api.byId('iol_master'), 'readonly', 'true');
+    $api.attr($api.byId('ubm'), 'readonly', 'true');
+    $api.attr($api.byId('view_horizon'), 'readonly', 'true');
+    $api.attr($api.byId('glaucoma_rnfl'), 'readonly', 'true');
+    $api.attr($api.byId('glaucoma_mri'), 'readonly', 'true');
+    $api.attr($api.byId('oct'), 'readonly', 'true');
+    $api.attr($api.byId('octa'), 'readonly', 'true');
+    $api.attr($api.byId('fundus_oculi_pic'), 'readonly', 'true');
+    $api.attr($api.byId('b_ultrasonic'), 'readonly', 'true');
+    $api.attr($api.byId('ffa'), 'readonly', 'true');
+    $api.attr($api.byId('icg'), 'readonly', 'true');
+    $api.attr($api.byId('vep'), 'readonly', 'true');
+    $api.attr($api.byId('erg'), 'readonly', 'true');
+    $api.attr($api.byId('no_rnfl'), 'readonly', 'true');
+    $api.attr($api.byId('no_mri'), 'readonly', 'true');
 
     source = api.pageParam.source;
     var pageData = {};
@@ -139,6 +301,20 @@ apiready = function() {
         $api.byId("corneal_curvature").value = pageData.accessory_exam_pointer.corneal_curvature;
         $api.byId("corneal_topography").value = pageData.accessory_exam_pointer.corneal_topography;
         $api.byId("iol_master").value = pageData.accessory_exam_pointer.iol_master;
+        $api.byId("ubm").value = pageData.accessory_exam_pointer.ubm;
+        $api.byId("view_horizon").value = pageData.accessory_exam_pointer.view_horizon;
+        $api.byId("glaucoma_rnfl").value = pageData.accessory_exam_pointer.glaucoma_rnfl;
+        $api.byId("glaucoma_mri").value = pageData.accessory_exam_pointer.glaucoma_mri;
+        $api.byId("oct").value = pageData.accessory_exam_pointer.oct;
+        $api.byId("octa").value = pageData.accessory_exam_pointer.octa;
+        $api.byId("fundus_oculi_pic").value = pageData.accessory_exam_pointer.fundus_oculi_pic;
+        $api.byId("b_ultrasonic").value = pageData.accessory_exam_pointer.b_ultrasonic;
+        $api.byId("ffa").value = pageData.accessory_exam_pointer.ffa;
+        $api.byId("icg").value = pageData.accessory_exam_pointer.icg;
+        $api.byId("vep").value = pageData.accessory_exam_pointer.vep;
+        $api.byId("erg").value = pageData.accessory_exam_pointer.erg;
+        $api.byId("no_rnfl").value = pageData.accessory_exam_pointer.no_rnfl;
+        $api.byId("no_mri").value = pageData.accessory_exam_pointer.no_mri;
         setImgs();
         // 将附加检查数据存储在临时变量中，因为每次增加图片都需拼接图片
         // 的 html，所以增加完图片要保存到
@@ -147,26 +323,6 @@ apiready = function() {
         setStorage("imgTmp", pageData.accessory_exam_pointer);
     }
 
-    // 绑定android后退键事件
-    api.addEventListener({
-        name: 'keyback'
-    }, function(ret, err) {
-        if (ret) {
-            api.confirm({
-                title: '请选择',
-                msg: '未确认的修改会丢失，是否确认退出？',
-                buttons: ['退出', '取消']
-            }, function(ret, err) {
-                if (ret) {
-                    if (ret.buttonIndex == 1) {
-                        api.closeWin();
-                    }
-                } else {
-                    alert(JSON.stringify(err));
-                }
-            });
-        }
-    });
 }
 
 function addImg(id) {
@@ -313,61 +469,6 @@ function getImgHtml(obj) {
         idx = idx + 1;
     }
     return imgHtml;
-}
-
-function saveAccessoryExamDB(source, data) {
-    var model = api.require('model');
-    model.config({
-        appId: historyConstants.appId,
-        appKey: historyConstants.appKey,
-        host: historyConstants.host
-    });
-    model.updateById({
-        class: historyConstants.table.accessoryExam,
-        id: data.id,
-        value: data
-    }, function(ret, err) {
-        if (ret) {
-            var pageData = getStorage(source);
-            pageData.accessory_exam_pointer.id = ret.id;
-            setStorage(source, pageData);
-            accessoryExamSaveEvent(ret.id);
-            api.closeWin();
-        } else {
-            alert(JSON.stringify(ret));
-        }
-    });
-}
-
-/**
- * [savePhysical description]
- * @return {[type]} [description]
- */
-function saveAccessoryExam() {
-    var pageData = {};
-    if (source == "history") {
-        pageData = getStorage("history");
-    } else {
-        pageData = getStorage("followup");
-    }
-    if (getStorage("imgTmp") != undefined) {
-        pageData.accessory_exam_pointer = getStorage("imgTmp");
-    }
-
-    pageData.accessory_exam_pointer.but_r = $api.byId("but_r").value;
-    pageData.accessory_exam_pointer.but_l = $api.byId("but_l").value;
-    pageData.accessory_exam_pointer.sit_r = $api.byId("sit_r").value;
-    pageData.accessory_exam_pointer.sit_l = $api.byId("sit_l").value;
-    pageData.accessory_exam_pointer.qjzx = $api.byId("qjzx").value;
-    pageData.accessory_exam_pointer.corneal_curvature = $api.byId("corneal_curvature").value;
-    pageData.accessory_exam_pointer.corneal_topography = $api.byId("corneal_topography").value;
-    pageData.accessory_exam_pointer.iol_master = $api.byId("iol_master").value;
-
-    // 保存在本地
-    setStorage(source, pageData);
-
-    // 保存到云端
-    saveAccessoryExamDB(source, pageData.accessory_exam_pointer);
 }
 </script>
 
